[tool.poetry]
name = "zohotoolkit"
version = "0.1.0"
description = "A library for working with Zoho CRM API data that mimics Deluge "
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
